# fm-dicom

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  Packaging plan.md  README.md  Scope.md  flake.nix  fm-dtedit  fm-dtedit.desktop  main.py  pyproject.toml  pytest.ini  requirements.txt  result  run_app.py  run_tests.py  test_basic.py  test_performance_validation.py  validate_tests.py
.direnv/: flake-profile-1-link  flake-profile-6-link  flake-profile-7-link  flake-profile-8-link
.direnv/python-3.11/: pyvenv.cfg
dicomtageditor/: __main__.py  app.py  config.yml  dicom_send_destinations.yaml  main.py
dicomtageditor/models/: dicom_model.py
fm_dicom/: __init__.py  __main__.py  __version__.py  app.py  config.yml  main.py  main_window.py  main_window_original.py  main_window_refactored_fixed.py
fm_dicom/anonymization/: anonymization.py  anonymization_ui.py
fm_dicom/config/: config_manager.py  dicom_setup.py
fm_dicom/core/: dicomdir.py  dicomdir_builder.py  dicomdir_reader.py  path_generator.py  workers.py
fm_dicom/dialogs/: audit_log_dialog.py  dicom_send_selection.py  move_item_dialog.py  pending_changes_dialog.py  progress_dialogs.py  results_dialogs.py  selection_dialogs.py  uid_configuration_dialog.py  utility_dialogs.py
fm_dicom/managers/: __init__.py  audit_manager.py  dicom_manager.py  duplication_manager.py  file_manager.py  staging_manager.py  (+2 more)
tests/: README.md  conftest.py  test_anonymization.py  test_config.py  test_dicom_manager.py  test_dicom_operations.py  test_file_manager.py  test_tree_manager.py  test_validation.py  test_workers.py
(+29 files in other folders)
